improvement for getPrice()